<resources>
    <string name="app_name">Hello World</string>
    <string name="loginButtonText">Login</string>
    <string name="loginText">Login</string>
    <string name="passwordText">Password</string>
    <string name="loginError">Wrong login or password</string>
    <string name="loginSuccess">LOG IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>